--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/share?serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/share?serverTimezone=Asia/Shanghai&useAffectedRows=true&allowMultiQueries=true
     username: zhuhh
     password: zhuhh
