--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -6,8 +6,10 @@ spring:
     password: zhuhh
   jpa:
     show-sql: true
-    hibernate:
-      ddl-auto: update
+#    hibernate:
+#      ddl-auto: update
+#      naming:
+#        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
   main:
     allow-bean-definition-overriding: true
 token:
