分析数据、excel上传

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -12,6 +12,12 @@ spring:
 #        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
   main:
     allow-bean-definition-overriding: true
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 token:
   expire:
     hours: 4
+upload:
+  dir: D:/tmp
